fix z-index

--- a/my-app/src/assets/Styles/HomePage/_index.scss
+++ b/my-app/src/assets/Styles/HomePage/_index.scss
@@ -24,7 +24,7 @@
         height: 90%;
         justify-content: space-between;
         position: relative;
-        z-index: 1;
+        z-index: $z-index-default;
         line-height: 30px;
 
         .container__left {
@@ -73,7 +73,7 @@
                     height: 50px;
                     line-height: 50px;
                     border-radius: 50%;
-                    z-index: 4;
+                    z-index: $z-index-button;
                     border: 2px solid #ffffff;
                     cursor: pointer;
                     background: #ffffff;
